ipc/ipdl/test/ipdl/error/SyncAsyncManager.ipdl
include protocol SyncAsyncManagee;

async protocol SyncAsyncManager {
    manages SyncAsyncManagee;
parent:
    async SyncAsyncManagee();
};
